application/kustomize/exercise-app/overlays/production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-app
spec:
  selector:
    matchLabels:
      app: exercise-app
  template:
    spec:
      containers:
        - image: glendmaatita/exercise-app:latest
          name: exercise-app
---
