application/kustomize/exercise-app/overlays/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-app
spec:
  ingressClassName: nginx # use "nginx" if not using microk8s
  rules:
    - host: exercise-app-prod.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exercise-app
                port:
                  number: 80
  tls:
    - hosts:
        - exercise-app-prod.bootcamp.onxp.net
      secretName: tls-secret-bootcamp-exercise-app
---
