application/kustomize/exercise-app/overlays/production/manifests.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-app
spec:
  selector:
    matchLabels:
      app: exercise-app
  template:
    spec:
      containers:
        - image: glendmaatita/exercise-app:v1.0.1
          name: exercise-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-app
spec:
  ingressClassName: nginx
  rules:
    - host: exercise-app-prod.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exercise-app
                port:
                  number: 80
  tls:
    - hosts:
        - exercise-app-prod.bootcamp.onxp.net
      secretName: tls-secret-bootcamp-exercise-app
---
